feat: add userhandler docs
